[gd_scene load_steps=15 format=2]

[ext_resource path="res://SA Assets/Usable/Backgrounds/menu.png" type="Texture" id=1]
[ext_resource path="res://SA Assets/Usable/Menu/Options/0Chosen.png" type="Texture" id=2]
[ext_resource path="res://SA Assets/Usable/Menu/Options/Life.png" type="Texture" id=3]
[ext_resource path="res://SA Assets/Usable/Menu/Options/1.png" type="Texture" id=4]
[ext_resource path="res://SA Assets/Usable/Menu/Options/3.png" type="Texture" id=5]
[ext_resource path="res://SA Assets/Usable/Menu/Options/0.png" type="Texture" id=6]
[ext_resource path="res://SA Assets/Usable/Menu/Quit.png" type="Texture" id=7]
[ext_resource path="res://SA Assets/Usable/Menu/Options/3Chosen.png" type="Texture" id=8]
[ext_resource path="res://SA Assets/Usable/Menu/Options/1Chosen.png" type="Texture" id=9]
[ext_resource path="res://SA Assets/Usable/Menu/Options/Bomb.png" type="Texture" id=10]
[ext_resource path="res://SA Assets/Usable/Menu/Options/2.png" type="Texture" id=11]
[ext_resource path="res://SA Assets/Usable/Menu/Quit1.png" type="Texture" id=12]
[ext_resource path="res://SA Assets/Usable/Menu/Options/2Chosen.png" type="Texture" id=13]
[ext_resource path="res://OptionsMenu.gd" type="Script" id=14]

[node name="OptionsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionRows" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -272.0
margin_top = -224.0
custom_constants/separation = 22
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LifeContainer" type="HBoxContainer" parent="OptionRows"]
margin_right = 272.0
margin_bottom = 40.0
custom_constants/separation = 18

[node name="Life" type="TextureButton" parent="OptionRows/LifeContainer"]
margin_right = 96.0
margin_bottom = 40.0
texture_normal = ExtResource( 3 )

[node name="NCont" type="HBoxContainer" parent="OptionRows/LifeContainer"]
margin_left = 114.0
margin_right = 254.0
margin_bottom = 40.0
custom_constants/separation = 12

[node name="Life0" type="TextureButton" parent="OptionRows/LifeContainer/NCont"]
margin_right = 32.0
margin_bottom = 40.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )

[node name="Life1" type="TextureButton" parent="OptionRows/LifeContainer/NCont"]
margin_left = 44.0
margin_right = 64.0
margin_bottom = 40.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 9 )

[node name="Life2" type="TextureButton" parent="OptionRows/LifeContainer/NCont"]
margin_left = 76.0
margin_right = 104.0
margin_bottom = 40.0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Life3" type="TextureButton" parent="OptionRows/LifeContainer/NCont"]
margin_left = 116.0
margin_right = 140.0
margin_bottom = 40.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 8 )

[node name="BombContainer" type="HBoxContainer" parent="OptionRows"]
margin_top = 62.0
margin_right = 272.0
margin_bottom = 102.0
custom_constants/separation = 18

[node name="Bomb" type="TextureButton" parent="OptionRows/BombContainer"]
margin_right = 95.0
margin_bottom = 40.0
texture_normal = ExtResource( 10 )

[node name="NCont" type="HBoxContainer" parent="OptionRows/BombContainer"]
margin_left = 113.0
margin_right = 253.0
margin_bottom = 40.0
custom_constants/separation = 12

[node name="Bomb0" type="TextureButton" parent="OptionRows/BombContainer/NCont"]
margin_right = 32.0
margin_bottom = 40.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )

[node name="Bomb1" type="TextureButton" parent="OptionRows/BombContainer/NCont"]
margin_left = 44.0
margin_right = 64.0
margin_bottom = 40.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 9 )

[node name="Bomb2" type="TextureButton" parent="OptionRows/BombContainer/NCont"]
margin_left = 76.0
margin_right = 104.0
margin_bottom = 40.0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bomb3" type="TextureButton" parent="OptionRows/BombContainer/NCont"]
margin_left = 116.0
margin_right = 140.0
margin_bottom = 40.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 8 )

[node name="Return" type="TextureButton" parent="OptionRows"]
margin_top = 124.0
margin_right = 272.0
margin_bottom = 164.0
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 12 )

[connection signal="pressed" from="OptionRows/LifeContainer/NCont/Life0" to="." method="_on_Life0_pressed"]
[connection signal="pressed" from="OptionRows/LifeContainer/NCont/Life1" to="." method="_on_Life1_pressed"]
[connection signal="pressed" from="OptionRows/LifeContainer/NCont/Life2" to="." method="_on_Life2_pressed"]
[connection signal="pressed" from="OptionRows/LifeContainer/NCont/Life3" to="." method="_on_Life3_pressed"]
[connection signal="pressed" from="OptionRows/BombContainer/NCont/Bomb0" to="." method="_on_Bomb0_pressed"]
[connection signal="pressed" from="OptionRows/BombContainer/NCont/Bomb1" to="." method="_on_Bomb1_pressed"]
[connection signal="pressed" from="OptionRows/BombContainer/NCont/Bomb2" to="." method="_on_Bomb2_pressed"]
[connection signal="pressed" from="OptionRows/BombContainer/NCont/Bomb3" to="." method="_on_Bomb3_pressed"]
[connection signal="pressed" from="OptionRows/Return" to="." method="_on_Return_pressed"]
